--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Heading</H1>
-    <p>Paragraph something....</p>
+ this is some code
 </body>
 </html>
